# ARIA

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app-release-signed.apk  app.py  build.gradle  desktop_app.py  eval_aria.py  main.py  manifest-checksum.txt  pyproject.toml  render.yaml  requirements.txt  run_aria.bat  run_build.bat  run_streamlit.ps1  style.css  test_agent.py  test_aria.py  test_chroma_thread.py  test_helpers.py  twa-manifest.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/swarajchattaraj/aria/: Application.java  DelegationService.java  LauncherActivity.java
app/src/main/res/values/: strings.xml
aria/: __init__.py  agent.py  auth.py  cache.py  config.py  core.py  llm.py  models.py  rag.py  reports.py  retrieval_logger.py  security.py  sessions.py  tools.py  visualizations.py
assets/: style.css
experiments/: scratchpad.ipynb
frontend/: README.md  index.html  package-lock.json  tailwind.config.js
frontend/public/: manifest.json  sw.js
frontend/public/.well-known/: assetlinks.json
frontend/public/downloads/: aria.apk
frontend/src/: App.css  App.jsx  index.css  main.jsx
tests/: evaluate.py  test_aria.py
