[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria-research-assistant"
version = "1.0.1"
description = "ARIA: Autonomous Research & Intelligence Assistant. An AI-powered RAG agent utilizing LangGraph and a React Web GUI to execute deep research loops with self-correcting verifiers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Swaraj Chattaraj" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "streamlit>=1.36.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "aiohttp>=3.9.5",
    "PyMuPDF>=1.24.0",
    "reportlab>=4.2.0",
    "chromadb>=0.5.0",
    "langgraph>=0.0.35",
    "langchain-core>=0.1.40",
    "yfinance>=0.2.30",
    "pysqlite3-binary; sys_platform == 'linux'",
    "protobuf==3.20.3",
    "tokenizers>=0.22.0,<=0.23.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.1.0"
]

[project.urls]
Homepage = "https://github.com/SWARAJCHATTARAJ/ARIA"
Repository = "https://github.com/SWARAJCHATTARAJ/ARIA"
Bug-Tracker = "https://github.com/SWARAJCHATTARAJ/ARIA/issues"

[tool.hatch.build.targets.wheel]
packages = ["aria"]
